--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.2.1",
     "mongoose": "^6.1.7",
     "mongoose-unique-validator": "^3.0.0",
     "validator": "^13.7.0"
