--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "dev": "nodemon index.js"
   },
   "repository": {
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/joonaskinnunen/api-exercise#readme",
   "dependencies": {
+    "ajv": "^8.10.0",
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "chai-json-schema-ajv": "^5.2.4",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
